# nauty-wrapper

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: nautyClassify.h  nauty_wrapper.hpp
lib/pkgconfig/: libnauty.pc  libnauty1.pc  libnautyL.pc  libnautyL1.pc  libnautyQ.pc  libnautyQ1.pc  libnautyS.pc  libnautyS1.pc  libnautyW.pc  libnautyW1.pc
src/: nautyClassify.cpp  nauty_wrapper.cpp  test_nautyClassify.cpp
test/: CMakeLists.txt  test_nautyClassify.cpp  wrapper_test.cpp
